<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_day_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="@dimen/toolbar_elevation"
        android:paddingLeft="@dimen/calendar_day_title_line_margin"
        android:paddingRight="@dimen/calendar_day_title_line_margin"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_day_title_line_sun"
            android:layout_width="0dp"
            android:layout_height="@dimen/calendar_day_title_line_height"
            android:layout_margin="@dimen/calendar_day_title_line_margin"
            android:src="@drawable/selector_day_title_line"
            app:layout_constraintEnd_toStartOf="@+id/iv_day_title_line_mon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_day_title_line_mon"
            android:layout_width="0dp"
            android:layout_height="@dimen/calendar_day_title_line_height"
            android:layout_margin="@dimen/calendar_day_title_line_margin"
            android:src="@drawable/selector_day_title_line"
            app:layout_constraintEnd_toStartOf="@id/iv_day_title_line_tue"
            app:layout_constraintStart_toEndOf="@+id/iv_day_title_line_sun"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_day_title_line_tue"
            android:layout_width="0dp"
            android:layout_height="@dimen/calendar_day_title_line_height"
            android:layout_margin="@dimen/calendar_day_title_line_margin"
            android:src="@drawable/selector_day_title_line"
            app:layout_constraintEnd_toStartOf="@+id/iv_day_title_line_wed"
            app:layout_constraintStart_toEndOf="@+id/iv_day_title_line_mon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_day_title_line_wed"
            android:layout_width="0dp"
            android:layout_height="@dimen/calendar_day_title_line_height"
            android:layout_margin="@dimen/calendar_day_title_line_margin"
            android:src="@drawable/selector_day_title_line"
            app:layout_constraintEnd_toStartOf="@+id/iv_day_title_line_thu"
            app:layout_constraintStart_toEndOf="@+id/iv_day_title_line_tue"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_day_title_line_thu"
            android:layout_width="0dp"
            android:layout_height="@dimen/calendar_day_title_line_height"
            android:layout_margin="@dimen/calendar_day_title_line_margin"
            android:src="@drawable/selector_day_title_line"
            app:layout_constraintEnd_toStartOf="@+id/iv_day_title_line_fri"
            app:layout_constraintStart_toEndOf="@+id/iv_day_title_line_wed"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_day_title_line_fri"
            android:layout_width="0dp"
            android:layout_height="@dimen/calendar_day_title_line_height"
            android:layout_margin="@dimen/calendar_day_title_line_margin"
            android:src="@drawable/selector_day_title_line"
            app:layout_constraintEnd_toStartOf="@+id/iv_day_title_line_sat"
            app:layout_constraintStart_toEndOf="@+id/iv_day_title_line_thu"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_day_title_line_sat"
            android:layout_width="0dp"
            android:layout_height="@dimen/calendar_day_title_line_height"
            android:layout_margin="@dimen/calendar_day_title_line_margin"
            android:layout_marginEnd="@dimen/calendar_day_title_line_margin"
            android:src="@drawable/selector_day_title_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_day_title_line_fri"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_column_between_sun_and_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1428571428" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_column_between_mon_and_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2857142857" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_column_between_tue_and_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.42857142857" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_column_between_wed_and_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5714285712" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_column_between_thu_and_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.714285714" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_column_between_fri_and_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8571428571" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom_of_day_title_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_day_title_line_wed" />

        <TextView
            android:id="@+id/tv_day_title_text_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_sun_and_mon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gl_bottom_of_day_title_line" />

        <TextView
            android:id="@+id/tv_day_text_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_sun_and_mon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_day_title_text_sun" />

        <TextView
            android:id="@+id/tv_day_title_text_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_mon_and_tue"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_sun_and_mon"
            app:layout_constraintTop_toBottomOf="@+id/gl_bottom_of_day_title_line" />

        <TextView
            android:id="@+id/tv_day_text_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="2"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_sun_and_mon"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_mon_and_tue"
            app:layout_constraintTop_toBottomOf="@+id/tv_day_title_text_mon" />

        <TextView
            android:id="@+id/tv_day_title_text_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_tue_and_wed"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_mon_and_tue"
            app:layout_constraintTop_toBottomOf="@+id/gl_bottom_of_day_title_line" />

        <TextView
            android:id="@+id/tv_day_text_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="3"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_mon_and_tue"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_tue_and_wed"
            app:layout_constraintTop_toBottomOf="@+id/tv_day_title_text_tue" />

        <TextView
            android:id="@+id/tv_day_title_text_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@id/gl_column_between_tue_and_wed"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_wed_and_thu"
            app:layout_constraintTop_toBottomOf="@+id/gl_bottom_of_day_title_line" />

        <TextView
            android:id="@+id/tv_day_text_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="4"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_wed_and_thu"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_tue_and_wed"
            app:layout_constraintTop_toBottomOf="@+id/tv_day_title_text_wed" />

        <TextView
            android:id="@+id/tv_day_title_text_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_thu_and_fri"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_wed_and_thu"
            app:layout_constraintTop_toBottomOf="@+id/gl_bottom_of_day_title_line" />

        <TextView
            android:id="@+id/tv_day_text_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="5"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_thu_and_fri"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_wed_and_thu"
            app:layout_constraintTop_toBottomOf="@+id/tv_day_title_text_thu" />

        <TextView
            android:id="@+id/tv_day_title_text_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_fri_and_sat"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_thu_and_fri"
            app:layout_constraintTop_toBottomOf="@+id/gl_bottom_of_day_title_line" />

        <TextView
            android:id="@+id/tv_day_text_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="6"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/gl_column_between_fri_and_sat"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_thu_and_fri"
            app:layout_constraintTop_toBottomOf="@+id/tv_day_title_text_fri" />

        <TextView
            android:id="@+id/tv_day_title_text_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_fri_and_sat"
            app:layout_constraintTop_toBottomOf="@+id/gl_bottom_of_day_title_line" />

        <TextView
            android:id="@+id/tv_day_text_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="7"
            android:textColor="@color/selector_day_title_text"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gl_column_between_fri_and_sat"
            app:layout_constraintTop_toBottomOf="@+id/tv_day_title_text_sat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_schedule"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_day_title" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/cpb_loading"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_day_title" />

</androidx.constraintlayout.widget.ConstraintLayout>